homework auth